test/SemanticAnalysis/LifetimeMethods/InvalidStaticnessMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__move' should not be static
	static TestClass __move() noexcept {
		return @();
	}
}

// CHECK: 1 error generated.
